frame/support/test/tests/pallet_ui/duplicate_call_attr.stderr
error: Invalid duplicated attribute
  --> $DIR/duplicate_call_attr.rs:23:12
   |
23 |     #[pallet::call]
   |               ^^^^
